<?xml version="1.0" encoding="utf-8"?>
<com.lc.amounts.selection.layout.KotlinAmountsSelectionLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/dp_17"
    android:layout_marginTop="@dimen/dp_20"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_ten"
            android:layout_width="@dimen/dp_0"
            android:layout_height="@dimen/dp_44"
            android:layout_marginLeft="@dimen/dp_12"
            android:layout_marginRight="@dimen/dp_8"
            android:layout_weight="1"
            android:background="@drawable/text_border_green_bg"
            android:gravity="center"
            android:text="@string/recharge_ten_yuan"
            android:textColor="@color/color_666666"
            android:textSize="@dimen/textSize14"/>
        <TextView
            android:id="@+id/tv_twenty"
            android:layout_width="@dimen/dp_0"
            android:layout_height="@dimen/dp_44"
            android:layout_marginBottom="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_8"
            android:layout_weight="1"
            android:background="@drawable/text_border_green_bg"
            android:gravity="center"
            android:text="@string/recharge_twenty_yuan"
            android:textColor="@color/color_666666"
            android:textSize="@dimen/textSize14"/>
        <TextView
            android:id="@+id/tv_fifty"
            android:layout_width="@dimen/dp_0"
            android:layout_height="@dimen/dp_44"
            android:layout_marginBottom="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_12"
            android:layout_weight="1"
            android:background="@drawable/text_border_green_bg"
            android:gravity="center"
            android:text="@string/recharge_fifty_yuan"
            android:textColor="@color/color_666666"
            android:textSize="@dimen/textSize14"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_one_hundred"
            android:layout_width="@dimen/dp_0"
            android:layout_height="@dimen/dp_44"
            android:layout_marginLeft="@dimen/dp_12"
            android:layout_marginRight="@dimen/dp_8"
            android:layout_weight="1"
            android:background="@drawable/text_border_green_bg"
            android:gravity="center"
            android:text="@string/recharge_one_hundred_yuan"
            android:textColor="@color/color_666666"
            android:textSize="@dimen/textSize14"/>
        <TextView
            android:id="@+id/tv_two_hundred"
            android:layout_width="@dimen/dp_0"
            android:layout_height="@dimen/dp_44"
            android:layout_marginBottom="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_8"
            android:layout_weight="1"
            android:background="@drawable/text_border_green_bg"
            android:gravity="center"
            android:text="@string/recharge_two_hundred_yuan"
            android:textColor="@color/color_666666"
            android:textSize="@dimen/textSize14"/>
        <TextView
            android:id="@+id/tv_five_hundred"
            android:layout_width="@dimen/dp_0"
            android:layout_height="@dimen/dp_44"
            android:layout_marginBottom="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_12"
            android:layout_weight="1"
            android:background="@drawable/text_border_green_bg"
            android:gravity="center"
            android:text="@string/recharge_five_hundred_yuan"
            android:textColor="@color/color_666666"
            android:textSize="@dimen/textSize14"/>

    </LinearLayout>

</com.lc.amounts.selection.layout.KotlinAmountsSelectionLayout>
